--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "life-pro",
+  "name": "next03",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,33 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@enterwell/react-form-validation": "^1.2.8",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
     "@material-tailwind/react": "^1.4.2",
-    "@next/font": "13.1.6",
-    "@react-hook/window-size": "^3.1.1",
-    "eslint-config-next": "^13.2.4",
-    "flowbite": "^1.6.3",
-    "flowbite-react": "^0.3.8",
-    "next": "^13.2.4",
+    "@types/node": "18.14.4",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "eslint": "8.35.0",
+    "eslint-config-next": "13.2.3",
+    "flowbite": "^1.6.4",
+    "next": "^13.2.5-canary.20",
     "next-auth": "^4.20.1",
-    "react": "^18.2.0",
+    "react": "18.2.0",
     "react-countdown": "^2.3.5",
-    "react-custom-scroll": "^5.0.0",
-    "react-dom": "^18.2.0",
-    "react-list-select": "^0.4.1",
+    "react-dom": "18.2.0",
     "react-otp-field": "^3.0.1",
-    "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.2.19",
-    "react-responsive-carousel": "^3.2.23",
-    "swiper": "^9.0.5",
-    "swr": "^2.1.1",
+    "swiper": "^9.1.1",
+    "typescript": "4.9.5",
     "use-timer": "^2.0.1"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
   }
 }
