--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next03",
+  "name": "life-pages-dir",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,30 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.13",
-    "@heroicons/react": "^2.0.16",
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.17",
     "@material-tailwind/react": "^1.4.2",
-    "@react-hook/window-size": "^3.1.1",
-    "@types/node": "18.14.4",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "eslint": "8.35.0",
-    "eslint-config-next": "13.2.3",
-    "flowbite": "^1.6.4",
-    "next": "^13.2.4",
-    "next-auth": "^4.20.1",
+    "@types/node": "18.16.1",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.1",
+    "autoprefixer": "10.4.14",
+    "headlessui": "^0.0.0",
+    "i18next": "^22.4.15",
+    "next": "13.3.1",
+    "next-auth": "^4.22.1",
+    "next-i18next": "^13.2.2",
+    "postcss": "8.4.23",
     "react": "18.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "react-i18next": "^12.2.2",
+    "react-intl": "^6.4.1",
     "react-otp-field": "^3.0.1",
-    "react-phone-number-input": "^3.2.19",
-    "swiper": "^9.1.1",
-    "typescript": "4.9.5",
+    "react-phone-number-input": "^3.2.20",
+    "swiper": "^9.2.4",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.0.4",
     "use-timer": "^2.0.1"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.0"
   }
 }
